[metadata]
name = pydlfmt
version = v0.0.3
author = Jim Steil
author_email = jim@steilonline.com
description = Quickly format lists of data as PDF or Excel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpsteil/pydlfmt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
